STA-2081: Fixed Employee CRUD
STA-2081: Fixed model
