# backend/openapi.yaml
@@ -1177,93 +1177,86 @@ components:
       type: object
       properties:
         first_name:
-          type: string
-          example: "John"
+         type: string
         middle_name:
           type: string
-          example: "Doe"
         last_name:
           type: string
-          example: "Smith"
-        birth_date:
+        role:
           type: string
-          format: date
-          example: "2000-01-01"
+          example: "employee"
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+          format: password
+        password_confirmation:
+          type: string
+          format: password
         imgSrc:
           type: string
           example: "image_url"
-        position:
-          type: string
-          example: "backend"
-        work_experience:
-          type: number
-          format: float
-          example: 1.5
         salary:
           type: number
           format: float
           example: 50000
-        email:
+        birth_date:
           type: string
-          format: email
-          example: "john.doe@example.com"
-        balance:
-          type: number
-          format: float
-          example: 0
+          format: date
+          example: "2000-01-01"
+        position:
+          type: string
+          example: "backend"
+        status:
+          type: string
+          example: "working"
         date_of_hiring:
           type: string
           format: date
           example: "2024-04-10"
-        age_in_full_years:
-          type: integer
-          example: 23
+        work_experience:
+          type: number
+          format: float
+          example: 1.5
+        balance:
+          type: number
+          format: float
+          example: 0
+
 
     UpdateEmployeeRequest:
-        type: object
-        properties:
-          first_name:
-            type: string
-            example: "John"
-          middle_name:
-            type: string
-            example: "Doe"
-          last_name:
-            type: string
-            example: "Smith"
-          birth_date:
-            type: string
-            format: date
-            example: "2000-01-01"
-          imgSrc:
-            type: string
-            example: "image_url"
-          position:
-            type: string
-            example: "backend"
-          work_experience:
-            type: number
-            format: float
-            example: 1.5
-          salary:
-            type: number
-            format: float
-            example: 50000
-          email:
-            type: string
-            format: email
-            example: "john.doe@example.com"
-          balance:
-            type: number
-            format: float
-            example: 0
-          date_of_hiring:
-            type: string
-            format: date
-            example: "2024-04-10"
-          age_in_full_years:
-            type: integer
-            example: 23
+      type: object
+      properties:
+        imgSrc:
+          type: string
+          example: "image_url"
+        salary:
+          type: number
+          format: float
+          example: 50000
+        birth_date:
+          type: string
+          format: date
+          example: "2000-01-01"
+        position:
+          type: string
+          example: "backend"
+        status:
+          type: string
+          example: "working"
+        date_of_hiring:
+          type: string
+          format: date
+          example: "2024-04-10"
+        work_experience:
+          type: number
+          format: float
+          example: 1.5
+        balance:
+          type: number
+          format: float
+          example: 0
 
     company:
       type: object
